--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 <body>
     <main>
         <section class="sedans">
-            <img src="./imagens/icon-sedans.svg" alt="carros_sedan">
+            <img src="./imagens/icon-sedans.svg" alt="">
             <h2>Sedans</h2>
             <p>Escolha um sedan pelo seu preço acessível e excelente economia de combustível. Ideal para dirigir na cidade ou na sua próxima viagem.</p>
             <a href="https://www.webmotors.com.br/sedans" target="_blank">Ver mais</a>
         </section>
         
         <section class="suvs">
-            <img src="./imagens/icon-suvs.svg" alt="carros_suv">
+            <img src="./imagens/icon-suvs.svg" alt="">
             <h2>Suvs</h2>
             <p>Escolha um SUV pelo seu interior espaçoso, poder e versatilidade. Perfeito para passar as férias em família ou para aventuras off-road.</p>
             <a href="https://www.webmotors.com.br/suvs" target="_blank">Ver mais</a>
         </section>
 
         <section class="luxuosos">
-            <img src="./imagens/icon-luxury.svg" alt="carros_luxuosos">
+            <img src="./imagens/icon-luxury.svg" alt="">
             <h2>Luxuosos</h2>
             <p>Passeie nos melhores carros sem os preços exorbitantes. Desfrute do conforto aprimorado de um aluguel de luxo e chegue com estilo.</p>
             <a href="https://www.webmotors.com.br/catalogo/carroceria/conversivel/" target="_blank">Ver mais</a>
